rewrite indexing yaml files, remove dependency to psi
try to make file type detecting move faster